# Cool-Engine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cool-engine-mime.xml  vcpkg.json
shaders/: brdf.frag  brdf.vert  cubemap.vert  ddgi_update.comp  default.frag  default.vert  equirect_to_cube.frag  grid.frag  grid.vert  irradiance.frag  line.frag  line.vert  material_template.frag  outline.frag  outline.vert  prefilter.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  triangle_frag.spv  triangle_vert.spv
src/: main.cpp
src/core/: Application.cpp  Application.h  Delegate.cpp  Delegate.h  Input.cpp  Input.h  UUID.cpp  UUID.h
src/ecs/: Components.h
src/editor/: AssetDefinitions.h  AssetRegistry.h  CommandHistory.cpp  CommandHistory.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorCommands.cpp  EditorCommands.h  EditorLayer.cpp  EditorLayer.h  IAssetEditor.h  UITheme.h  UndoManager.cpp  UndoManager.h
src/editor/materials/: MaterialCompiler.cpp  MaterialCompiler.h  MaterialGraph.h  MaterialNodeRegistry.cpp  MaterialNodeRegistry.h  NodeDefinitions.h
src/editor/panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  HubPanel.cpp  HubPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  MaterialInstanceEditorPanel.cpp  MaterialInstanceEditorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/math/: Math.cpp  Math.h
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/project/: Project.cpp  Project.h  ProjectCompiler.cpp  ProjectCompiler.h
src/renderer/: DDGIVolume.cpp  DDGIVolume.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  ModelLoader.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PrimitiveFactory.cpp  PrimitiveFactory.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  TextureLoader.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  stb_image_impl.cpp
src/scene/: Entity.h  NodeDefinitions.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.cpp  ScriptableEntity.h  ScriptableNode.cpp  ScriptableNode.h
src/scripts/: PlayerController.h  RadarScript.h  ScriptRegistry.h
tools/: CompileShaders.py  CoolHeaderTool.py  FormatIcons.py
